--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
+  "name": "nodejs",
+  "version": "1.0.0",
+  "description": "This version of __ is for temporary deployment.",
+  "main": "index.js",
+  "scripts": {
+      "test": "index.js",
+      "start": "node index.js"
+  },
+  "author": "____",
+  "license": "ISC",
   "dependencies": {
-    "@antiadmin/anticaptchaofficial": "^1.0.27",
-    "2captcha": "^3.0.5",
-    "axios": "^1.2.0",
-    "express": "^4.18.2",
-    "express-validator": "^6.14.2",
-    "puppeteer": "^19.3.0",
-    "request": "^2.88.2"
+      "ejs": "^2.5.7",
+      "express": "^4.16.2",
+      "request": "^2.83.0",
+      "socket.io": "^2.3.0",
+      "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+      "node": "^8.9.4"
   }
 }
