--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "____",
   "license": "ISC",
   "dependencies": {
-      "ejs": "^2.5.7",
-      "express": "^4.16.2",
-      "request": "^2.83.0",
-      "socket.io": "^2.3.0",
-      "qrcode-terminal": "^0.12.0"
+      "puppeteer": "^19.3.0",
+      "express": "^4.18.2",
+      "request": "^2.88.2",
+      "express-validator": "^6.14.2",
+      "@antiadmin/anticaptchaofficial": "^1.0.27",
+      "2captcha": "^3.0.5"
   },
   "engines": {
       "node": "^8.9.4"
